Fix z-index in css.

--- a/roam/public_html/css/custom.css
+++ b/roam/public_html/css/custom.css
@@ -47,7 +47,6 @@ body::before {
         rgba(0, 0, 0, 0.4) 4px,
     );
     pointer-events: none;
-    z-index: -1;
     opacity: 0.6;
 }
 
